--- a/crates/flagger/Cargo.toml
+++ b/crates/flagger/Cargo.toml
@@ -4,12 +4,12 @@ edition = "2021"
 keywords = ["flag", "enum"]
 license = "MIT"
 name = "flagger"
-readme = "README.md"
+readme = "../../README.md"
 repository = "https://github.com/rick-de-water/flagger"
 version = "0.1.0"
 
 [dependencies]
-flagger-macros = { path = "../flagger-macros" }
+flagger-macros = { path = "../flagger-macros", version = "0.1.0" }
 
 [dev-dependencies]
 should = { workspace = true }
